--- a/programmar/语法.md
+++ b/programmar/语法.md
@@ -9,7 +9,6 @@
 * `____方法名__`: 钩子函数,供python调用
 
 > `if __name__ == '__main__'`含义
-
-
-如果当前脚本是直接被执行,则会执行代码块中的代码;如果是被导入的,不执行代码块.
+ 
+&nbsp;&nbsp;&nbsp;&nbsp;如果当前脚本是直接被执行,则会执行代码块中的代码;如果是被导入的,不执行代码块.
 
